tests/agl/programs/errors/parse_error_fields.agl
# AgentParseError carries the documented diagnostic fields, usable in follow-up
# prompts.
record Spec
  name: text
  level: int

agent builder
agent critic

try
  let s: Spec = builder[on_parse_error: retry[1]] "Build the spec."
  print s.name
catch AgentParseError as e =>
  let advice = critic """
  Agent ${e.agent} failed for type ${e.target_type} after ${e.attempts} attempts.

  Raw:
  ${e.raw as raw}

  Errors:
  ${e.validation_errors}

  Schema:
  ${e.expected_schema}
  """
  print "advised"
  raise e
